Trying out with the mod tool, 70% working